--- a/kw-ui/pom.xml
+++ b/kw-ui/pom.xml
@@ -37,7 +37,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.3</version>
                 <configuration>
-                    <mainClass>io.kw.ui.App</mainClass>
+                    <mainClass>io.kw.ui.bootstrap.UIBootstrap</mainClass>
                 </configuration>
             </plugin>
         </plugins>
