Started UI for Main Controller, probably will change the name in the future.

--- a/kw-ui/pom.xml
+++ b/kw-ui/pom.xml
@@ -15,18 +15,21 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <jfoenix.version>9.0.9</jfoenix.version>
+        <fontawesome.version>9.1.2</fontawesome.version>
+        <javafx.version>13</javafx.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>13</version>
+            <version>${javafx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>13</version>
+            <version>${javafx.version}</version>
         </dependency>
     </dependencies>
 
