--- a/kw-ui/pom.xml
+++ b/kw-ui/pom.xml
@@ -17,7 +17,6 @@
         <maven.compiler.target>11</maven.compiler.target>
         <jfoenix.version>9.0.9</jfoenix.version>
         <fontawesome.version>9.1.2</fontawesome.version>
-        <javafx.version>13</javafx.version>
     </properties>
 
     <dependencyManagement>
@@ -35,12 +34,12 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
+            <version>13</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>${javafx.version}</version>
+            <version>13</version>
         </dependency>
         <dependency>
             <groupId>de.jensd</groupId>
