added to the pom, made any view to be able to be draggable

--- a/kw-ui/pom.xml
+++ b/kw-ui/pom.xml
@@ -61,6 +61,7 @@
                 <version>0.0.3</version>
                 <configuration>
                     <mainClass>io.kw.ui.bootstrap.UIBootstrap</mainClass>
+                    <launcher>launch</launcher>
                 </configuration>
             </plugin>
         </plugins>
