--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>kw-ui</module>
+        <module>kw-security</module>
     </modules>
 
     <properties>
@@ -31,6 +32,11 @@
                 <groupId>org.jboss.weld.se</groupId>
                 <artifactId>weld-se-shaded</artifactId>
                 <version>${weld.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.kw</groupId>
+                <artifactId>kw-security</artifactId>
+                <version>1.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
