--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>kw-ui</module>
+        <module>kw-service-clients</module>
     </modules>
 
     <properties>
@@ -18,6 +19,7 @@
         <lombok.version>1.18.10</lombok.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <weld.version>3.1.2.Final</weld.version>
+        <quarkus.version>1.0.0.Final</quarkus.version>
     </properties>
 
     <dependencyManagement>
@@ -26,6 +28,13 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombok.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-bom</artifactId>
+                <version>${quarkus.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.jboss.weld.se</groupId>
