--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
     <modules>
         <module>kw-ui</module>
         <module>kw-service-clients</module>
+        <module>kw-model</module>
+        <module>kw-engine</module>
     </modules>
 
     <properties>
@@ -41,6 +43,21 @@
                 <artifactId>weld-se-shaded</artifactId>
                 <version>${weld.version}</version>
             </dependency>
+            <dependency>
+                <groupId>io.kw</groupId>
+                <artifactId>kw-model</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>io.kw</groupId>
+                <artifactId>kw-service-clients</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>io.kw</groupId>
+                <artifactId>kw-engine</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -48,10 +65,6 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-arc</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jboss.weld.se</groupId>
