--- a/kw-ui/pom.xml
+++ b/kw-ui/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kw-ui</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>io.github.typhon0</groupId>
+            <artifactId>AnimateFX</artifactId>
+            <version>1.2.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
     <groupId>io.kw.ui</groupId>
     <packaging>pom</packaging>
 
