WIP: cli is still not working

--- a/kw-ui/kw-cli/pom.xml
+++ b/kw-ui/kw-cli/pom.xml
@@ -13,10 +13,6 @@
 
     <dependencies>
         <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-arc</artifactId>
-        </dependency>
-        <dependency>
             <groupId>io.kw</groupId>
             <artifactId>kw-engine</artifactId>
         </dependency>
@@ -25,8 +21,12 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>io.quarkus</groupId>
-                <artifactId>quarkus-maven-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                    <mainClass>io.kw.ui.cli.bootstrap.UIBootstrap</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
