--- a/kw-ui/kw-gui/pom.xml
+++ b/kw-ui/kw-gui/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>io.github.typhon0</groupId>
             <artifactId>AnimateFX</artifactId>
-            <version>1.2.1-SNAPSHOT</version>
+            <version>1.2.1</version>
         </dependency>
     </dependencies>
 
