Integrated lanterna for cli UI, made some changes and have quarkus as my entry point instead of weld. Changed the cdi engine to arc

--- a/kw-ui/kw-cli/pom.xml
+++ b/kw-ui/kw-cli/pom.xml
@@ -11,14 +11,23 @@
 
     <artifactId>kw-cli</artifactId>
 
+    <properties>
+        <lanterna.version>3.0.2</lanterna.version>
+    </properties>
+
     <dependencies>
+        <dependency>
+            <groupId>io.kw</groupId>
+            <artifactId>kw-engine</artifactId>
+        </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-arc</artifactId>
         </dependency>
         <dependency>
-            <groupId>io.kw</groupId>
-            <artifactId>kw-engine</artifactId>
+            <groupId>com.googlecode.lanterna</groupId>
+            <artifactId>lanterna</artifactId>
+            <version>${lanterna.version}</version>
         </dependency>
     </dependencies>
 
