--- a/kw-engine/pom.xml
+++ b/kw-engine/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>kw-engine</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
@@ -20,6 +21,11 @@
         <dependency>
             <groupId>io.kw</groupId>
             <artifactId>kw-service-clients</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-arc</artifactId>
         </dependency>
     </dependencies>
 </project>
