--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,9 @@
         <java.version>11</java.version>
         <lombok.version>1.18.10</lombok.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
+        <maven.exec.plugin.version>1.6.0</maven.exec.plugin.version>
         <weld.version>3.1.2.Final</weld.version>
-        <quarkus.version>1.0.1.Final</quarkus.version>
+        <quarkus.version>1.1.1.Final</quarkus.version>
     </properties>
 
     <dependencyManagement>
@@ -66,15 +67,16 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.jboss.weld.se</groupId>
-            <artifactId>weld-se-shaded</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>exec-maven-plugin</artifactId>
+                    <version>${maven.exec.plugin.version}</version>
+                </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
