--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>kw-model</module>
         <module>kw-engine</module>
         <module>kw-ui</module>
+        <module>kw-service</module>
     </modules>
 
     <properties>
@@ -66,6 +67,11 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit5</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
