--- a/kw-service-clients/pom.xml
+++ b/kw-service-clients/pom.xml
@@ -21,4 +21,13 @@
             <artifactId>quarkus-resteasy-jackson</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
