--- a/kw-service-clients/src/main/resources/application.properties
+++ b/kw-service-clients/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-io.kw.serviceClients.pricing.oanda.OandaPriceStreamingClient/mp-rest/url=https://stream-fxpractice.oanda.com/v3
-streaming-api/mp-rest/url=https://api-fxpractice.oanda.com/v3
+streaming-api/mp-rest/url=https://stream-fxpractice.oanda.com/v3
+historical-api/mp-rest/url=https://api-fxpractice.oanda.com/v3
