--- a/kw-ui/kw-gui/pom.xml
+++ b/kw-ui/kw-gui/pom.xml
@@ -56,6 +56,10 @@
             <artifactId>AnimateFX</artifactId>
             <version>1.2.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se-shaded</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
