--- a/kw-ui/kw-gui/pom.xml
+++ b/kw-ui/kw-gui/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <artifactId>kw-gui</artifactId>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
