Got the Chain of Responsibility to work

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,11 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_2.12</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-chain</groupId>
+            <artifactId>commons-chain</artifactId>
+            <version>1.2</version>
+        </dependency>
     </dependencies>
 
     <build>
